--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -161,6 +161,7 @@
 <!ENTITY Ctr_toolbars		"Nastavení lišt">
 <!ENTITY Ctr_dblclnewtab	"Dvojklik otevře nový panel (s adresou dle předvolby browser.newtab.url)">
 <!ENTITY Ctr_hidetbwot		"Skrývat lištu s pouze jedním panel (restartartujte Firefox!)">
+<!ENTITY Ctr_hidetbwote		"Reduce hiding delay on startup">
 <!ENTITY Ctr_notabfog		"Odstranit zamlžené pozadí (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Odstranit barvu pozadí (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Zmenšit prostor nad lištou nástrojů (pokud lze)">
