--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -7,9 +7,9 @@
 <!ENTITY Ctr_space			"Διάστημα">
 <!ENTITY Ctr_separator		"Διαχωριστικό">
 <!ENTITY Ctr_puibseparator	"Διαχωριστικό κουμπιού μενού πίνακα">
-<!ENTITY Ctr_navthrobber	"Activity Indicator">
+<!ENTITY Ctr_navthrobber	"Ενδείκτης δραστηριότητας">
 <!ENTITY Ctr_sidebarbutton	"Πλευρική στήλη">
-<!ENTITY Ctr_windowcontrols	"ελαχιστοποίηση/επαναφορά/κλείσιμο (Fullscreen)">
+<!ENTITY Ctr_windowcontrols	"ελαχιστοποίηση/επαναφορά/κλείσιμο (Πλήρης οθόνη)">
 
 <!ENTITY Ctr_cuibuttons		"Κουμπιά">
 <!ENTITY Ctr_cuibutnormal	"Κανονικά">
@@ -44,7 +44,7 @@
 <!ENTITY Ctr_tabminwidth	"Ελάχιστο εύρος:">
 <!ENTITY Ctr_tabwidthinfo	"Το ελάχιστο/μέγιστο εύρος καρτελών ελέγχονται από τις επεκτάσεις «TabMixPlus»">
 <!ENTITY Ctr_tabwidthinfo2	"Το ελάχιστο/μέγιστο εύρος καρτελών ελέγχονται από τις επεκτάσεις «TabUtilities»">
-<!ENTITY Ctr_tabwidthinfo3	"Values below 48px will cause glitches in most cases!">
+<!ENTITY Ctr_tabwidthinfo3	"Τιμές κάτω από 48px θα προκαλέσουν δυσλειτουργίες στις περισσότερες περιπτώσεις!">
 <!ENTITY Ctr_closetab_0		"Κλείσιμο καρτέλας">
 <!ENTITY Ctr_closetab_1		"Μόνο στην ενεργή καρτέλα">
 <!ENTITY Ctr_closetab_2		"Πουθενά">
@@ -161,6 +161,7 @@
 <!ENTITY Ctr_toolbars		"Ρυθμίσεις εργαλειοθήκης">
 <!ENTITY Ctr_dblclnewtab	"Άνοιγμα νέας καρτέλας με διπλό κλικ (χρήση browser.newtab.url)">
 <!ENTITY Ctr_hidetbwot		"Απόκρυψη εργαλειοθήκης καρτελών με μια καρτέλα (επανεκκινήστε τον Firefox!)">
+<!ENTITY Ctr_hidetbwote		"Reduce hiding delay on startup">
 <!ENTITY Ctr_notabfog		"Αφαίρεση ομίχλης φόντου (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Αφαίρεση χρώματος φόντου (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Μείωση χώρου πάνω από την εργαλειοθήκη (εάν είναι δυνατόν)">
