--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -6,7 +6,7 @@
 <!ENTITY Ctr_flexspace		"Flexible space">
 <!ENTITY Ctr_space			"Space">
 <!ENTITY Ctr_separator		"Separator">
-<!ENTITY Ctr_puibseparator	"PanelUI button separator">
+<!ENTITY Ctr_puibseparator	"Separator (for panel menu)">
 <!ENTITY Ctr_navthrobber	"Activity Indicator">
 <!ENTITY Ctr_sidebarbutton	"(Sidebar)">
 <!ENTITY Ctr_windowcontrols	"Min/max/close (Fullscreen)">
@@ -161,6 +161,7 @@
 <!ENTITY Ctr_toolbars		"Toolbar settings">
 <!ENTITY Ctr_dblclnewtab	"Double click opens a 'new' tab (using browser.newtab.url)">
 <!ENTITY Ctr_hidetbwot		"Hide tabs toolbar with one tab (restart Firefox!)">
+<!ENTITY Ctr_hidetbwote		"Reduce hiding delay on startup">
 <!ENTITY Ctr_notabfog		"Remove background fog (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Remove background color (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Reduce space above toolbar (if possible)">
