--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -161,6 +161,7 @@
 <!ENTITY Ctr_toolbars		"Configuraciones de barra de herramientas">
 <!ENTITY Ctr_dblclnewtab	"El doble clic abre una 'nueva' pestaña (usando browser.newtab.url)">
 <!ENTITY Ctr_hidetbwot		"Ocultar barra de pestañas con una sola pestaña (¡requiere reiniciar Firefox!)">
+<!ENTITY Ctr_hidetbwote		"Reduce hiding delay on startup">
 <!ENTITY Ctr_notabfog		"Eliminar niebla de fondo (Windows 8/Aeroglass)">
 <!ENTITY Ctr_notabbg		"Eliminar color de fondo (Windows 8/AeroGlass)">
 <!ENTITY Ctr_hightabpos		"Reducir espacio sobre la barra de herramientas (si es posible)">
