--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -161,6 +161,7 @@
 <!ENTITY Ctr_toolbars		"Barras de Ferramentas">
 <!ENTITY Ctr_dblclnewtab	"Clicar duas vezes para abrir a 'nova' guia (usando navegador.novaguia.url)">
 <!ENTITY Ctr_hidetbwot		"Ocultar as barras de guias com uma guia (reiniciar o Firefox!)">
+<!ENTITY Ctr_hidetbwote		"Reduce hiding delay on startup">
 <!ENTITY Ctr_notabfog		"Remover a névoa do fundo (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_notabbg		"Remover a cor do fundo (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_hightabpos		"Reduzir o espaço acima da barra (se possível)">
