--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -36,7 +36,7 @@
 <!ENTITY Ctr_tabsontop1		"Karty na górze - ustawienie [tabsontop=true]">
 <!ENTITY Ctr_tabsontop2		"Karty na górze - ustawienie [tabsontop=false]">
 <!ENTITY Ctr_tabsontop3		"Karty na górze (v2) - ustawienie [tabsontop=false]">
-<!ENTITY Ctr_tabsontopI1	"Dodaje atrybut [tabsontop=true/false] do">
+<!ENTITY Ctr_tabsontopI1	"Dodaje atrybut [tabsontop=true/false] do:">
 <!ENTITY Ctr_tabsintitlebar	"Pasek tytułu Firefoksa (ustawienie about:config)">
 <!ENTITY Ctr_tabwidthdef	"(domyślne)">
 <!ENTITY Ctr_tabwidthcla	"(klasyczne)">
@@ -74,7 +74,7 @@
 <!ENTITY Ctr_appbuttonc_pu	"Fioletowy kolor przycisku">
 <!ENTITY Ctr_appbuttonc_wh	"Biały kolor przycisku">
 <!ENTITY Ctr_appbuttonI1	"Zalecany restart">
-<!ENTITY Ctr_appbuttonI1e	"Niewidoczny na pasku tytułu systemu, tylko na pasku tytułu Firefoksa!">
+<!ENTITY Ctr_appbuttonI1e	"Niewidoczny na systemowym pasku tytułu, tylko na pasku tytułu Firefoksa!">
 <!ENTITY Ctr_appbuttonI2	"Kolory przycisku są tylko widoczne na pasku tytułu oraz pasku kart!">
 <!ENTITY Ctr_alttbappb		"Ikony alternatywne">
 <!ENTITY Ctr_appbutmhi		"Wyższa pozycja (jeżeli na pasku kart)">
@@ -89,10 +89,10 @@
 <!ENTITY Ctr_hide_bf_popup	"Ukryj menu historii po naciśnięciu przycisku myszki">
 <!ENTITY Ctr_noconicons		"Zastąp etykietami ikony menu kontekstowego strony (wstecz, do przodu, zatrzymaj odśwież, dodaj zakładkę)">
 <!ENTITY Ctr_wincontrols	"Ruchome kontrolki okna pełnego ekranu (minimalizuj, maksymalizuj, zamknij)">
-<!ENTITY Ctr_starinurl		"Przycisk-gwiazdka w pasku adresu (zrestartuj Firefoksa!)">
-<!ENTITY Ctr_feedinurl		"Przycisk RSS w pasku adresu (zrestartuj Firefoksa!)">
+<!ENTITY Ctr_starinurl		"Przycisk 'gwiazdka' na pasku adresu (zrestartuj Firefoksa!)">
+<!ENTITY Ctr_feedinurl		"Przycisk RSS na pasku adresu (zrestartuj Firefoksa!)">
 <!ENTITY Ctr_mstatusbar		"Ruchomy panel paska statusu">
-<!ENTITY Ctr_hideurelstop	"Ukryj przyciski zatrzymaj i odśwież w pasku adresu">
+<!ENTITY Ctr_hideurelstop	"Ukryj przyciski zatrzymaj i odśwież na pasku adresu">
 <!ENTITY Ctr_combrelstop	"Połącz przyciski zatrzymaj i odśwież">
 <!ENTITY Ctr_panelmenucol	"Menu panelu: alternatywny kolor tła">
 <!ENTITY Ctr_hideprivmask	"Prywatne przeglądanie: ukryj wskaźnik-maskę">
@@ -122,7 +122,7 @@
 <!ENTITY Ctr_tab_tf_info1	"Nazwy kolorów, kod szesnastkowy, wartości rgb(a) i hsl(a) są obsługiwane.">
 <!ENTITY Ctr_tab_tf_info2	"Wejścia nie będą zatwierdzane!">
 <!ENTITY Ctr_tabact_t		"wybrana">
-<!ENTITY Ctr_tabhov_t		"uniesiona">
+<!ENTITY Ctr_tabhov_t		"najechana">
 <!ENTITY Ctr_tabnor_t		"domyślna">
 <!ENTITY Ctr_tabpen_t		"wyładowana">
 <!ENTITY Ctr_tabunr_t		"nieprzeczytana">
@@ -131,12 +131,12 @@
 <!ENTITY Ctr_ctext			"Tekst">
 <!ENTITY Ctr_ctextsh		"Cień tekstu">
 <!ENTITY Ctr_tabnor			"Karta (domyślna)">
-<!ENTITY Ctr_tabhov			"Karta (uniesiona)">
+<!ENTITY Ctr_tabhov			"Karta (najechana)">
 <!ENTITY Ctr_tabact			"Karta (aktywna)">
 <!ENTITY Ctr_tabpen			"Karta (wyładowana)">
 <!ENTITY Ctr_tabunr			"Karta (nieprzeczytana)">
 <!ENTITY Ctr_ntabnor		"Nowa karta (domyślna)">
-<!ENTITY Ctr_ntabhov		"Nowa karta (uniesiona)">
+<!ENTITY Ctr_ntabhov		"Nowa karta (najechana)">
 <!ENTITY Ctr_bold			"Pogrubiona">
 <!ENTITY Ctr_italic			"Kursywa">
 
@@ -144,9 +144,9 @@
 <!ENTITY Ctr_emptyfavicon	"Przywróć pustą ikonę ulubionych (jeżeli strona nie zaoferuje żadnej)">
 <!ENTITY Ctr_emptyfavicon2	"Wymień standardową ikonę ulubionych (pusta i wykropkowana) na ikonę kartki">
 <!ENTITY Ctr_noemptypticon	"Usuń pustą ikonę ulubionych z przypiętej karty">
-<!ENTITY Ctr_faviconurl0	"Ikony w pasku adresu">
-<!ENTITY Ctr_faviconurl		"IKona ulubionych w pasku adresu (zrestartuj Firefoksa!)">
-<!ENTITY Ctr_padlock_hid	"Ikona kłódki (ukrtyta)">
+<!ENTITY Ctr_faviconurl0	"Ikony na pasku adresu">
+<!ENTITY Ctr_faviconurl		"Ikona ulubionych na pasku adresu (zrestartuj Firefoksa!)">
+<!ENTITY Ctr_padlock_hid	"Ikona kłódki (ukryta)">
 <!ENTITY Ctr_padlock_def	"Ikona kłódki (domyślna)">
 <!ENTITY Ctr_padlock_cla	"Ikona kłódki (klasyczna)">
 <!ENTITY Ctr_padlock_mod	"Ikona kłódki (nowoczesna)">
@@ -161,12 +161,13 @@
 <!ENTITY Ctr_toolbars		"Ustawienia paska narzędzi">
 <!ENTITY Ctr_dblclnewtab	"Podwójne kliknięcie otwiera 'nową' kartę (używa browser.newtab.url)">
 <!ENTITY Ctr_hidetbwot		"Ukryj pasek kart z jedną kartą (zrestartuj Firefoksa!)">
+<!ENTITY Ctr_hidetbwote		"Zmniejsz opóźnienie ukrywania przy uruchamianiu">
 <!ENTITY Ctr_notabfog		"Usuń mgłe tła (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Usuń kolor tła (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Zredukuj przestrzeń powyżej paska narzędzi (jeżeli możliwe)">
 <!ENTITY Ctr_alttabstb		"Alternatywny kolor tła">
 
-<!ENTITY Ctr_altmenubar		"Dodaj kolor tła (pasek tytuły systemu)">
+<!ENTITY Ctr_altmenubar		"Dodaj kolor tła (systemowy pasek tytuły)">
 <!ENTITY Ctr_altmenubarpos	"Alternatywna pozycja (poniżej paska tytułu Firefoksa)">
 <!ENTITY Ctr_menubarnofog	"Usuń kolor tła i mgłę (Windows AeroGlass/8)">
 
